--- a/2018-06-14-LTC.html
+++ b/2018-06-14-LTC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2018-06-14 LTC</title>
+  <title>The Carpentries community</title>
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,8 +20,9 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: '2018-06-14 LTC',
-                        useBuilds: true,
+                title: 'The Carpentries community',
+                        subtitle: 'teaching researchers foundational computational and data science skills',
+                useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
         enableTouch: true,
